--- a/TypeScriptHTMLApp1/app.css
+++ b/TypeScriptHTMLApp1/app.css
@@ -7,9 +7,9 @@ span {
 }
 
 #content {
-    border-style: solid;
+    /*border-style: solid;
     border-width: 5px;
-    border-color: black;
+    border-color: black;*/
     width: 800px;
     height: 800px;
 
